Remove unused code declarations (#1645)