@@ -148,18 +148,16 @@ public class RubiconBidder implements Bidder<BidRequest> {
     private static final String DMP_STYPE = "dmp";
     private static final String XAPI_CURRENCY = "USD";
 
-    private static final Set<Integer> USER_SEGTAXES = Collections.unmodifiableSet(
-            new HashSet<>(Collections.singletonList(4)));
-    private static final Set<Integer> SITE_SEGTAXES = Collections.unmodifiableSet(
-            new HashSet<>(Arrays.asList(1, 2, 5, 6)));
+    private static final Set<Integer> USER_SEGTAXES = Set.of(4);
+    private static final Set<Integer> SITE_SEGTAXES = Set.of(1, 2, 5, 6);
 
     private static final Set<String> STYPE_TO_REMOVE = new HashSet<>(Arrays.asList(PPUID_STYPE, SHA256EMAIL_STYPE,
             DMP_STYPE));
     private static final TypeReference<ExtPrebid<ExtImpPrebid, ExtImpRubicon>> RUBICON_EXT_TYPE_REFERENCE =
-            new TypeReference<ExtPrebid<ExtImpPrebid, ExtImpRubicon>>() {
+            new TypeReference<>() {
             };
     private static final TypeReference<ExtPrebid<ExtBidPrebid, ObjectNode>> EXT_PREBID_TYPE_REFERENCE =
-            new TypeReference<ExtPrebid<ExtBidPrebid, ObjectNode>>() {
+            new TypeReference<>() {
             };
     private static final int PORTRAIT_MOBILE_SIZE_ID = 67;
     private static final int LANDSCAPE_MOBILE_SIZE_ID = 101;
